kubectl_deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cp-slashbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cp-slashbot
  template:
    metadata:
      labels:
        app: cp-slashbot
    spec:
      containers:
      - name: cp-slashbot
        image: ministryofjustice/cloud-platform-slashbot:1.1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
