kubectl_deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cp-slashbot-service
  labels:
    app: cp-slashbot-service
spec:
  ports:
  - port: 5000
    name: http
    targetPort: 5000
  selector:
    app: cp-slashbot
