kubectl_deploy/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cpslashbot-ingress
spec:
  tls:
  - hosts:
    - cp-slashbot.apps.live-1.cloud-platform.service.justice.gov.uk
  rules:
  - host: cp-slashbot.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: cp-slashbot-service
          servicePort: 5000
